# Self-delivery_project

./: .clineignore  .cproject  .gitignore  .mxproject  .project  Self-delivery_project.ioc
Core/Inc/: can.h  motor.h  stm32f1xx_it.h
Core/Src/: can.c  gpio.c  main.c  motor.c  tim.c
Debug/: Self-delivery_project.elf  Self-delivery_project.list  Self-delivery_project.map  makefile
Debug/Core/Src/: can.cyclo  can.d  can.su  main.cyclo  main.d  main.su  motor.cyclo  motor.su  subdir.mk  tim.cyclo  usart.cyclo  usart.su
Self-delivery_project/: .cproject  README.md  Self-delivery_project Debug.launch  Self-delivery_project.ioc
Self-delivery_project/Core/Inc/: can.h  main.h  motor.h  stm32f1xx_it.h  usart.h
Self-delivery_project/Core/Src/: can.c  gpio.c  main.c  motor.c  stm32f1xx_it.c  tim.c  usart.c
Self-delivery_project/Debug/: Self-delivery_project.elf  Self-delivery_project.list  Self-delivery_project.map  makefile  objects.list
Self-delivery_project/raspberry_pi_node/: .gitignore  can_bridge.py  requirements.txt  robot_control.py
raspberry_pi_node/ros2_ws/install/: local_setup.sh  setup.sh
raspberry_pi_node/ros2_ws/src/robot_controller/: package.xml  setup.py
raspberry_pi_node/ros2_ws/src/robot_controller/config/: nav2_params.yaml
raspberry_pi_node/ros2_ws/src/robot_controller/launch/: nav2.launch.py  robot.launch.py
raspberry_pi_node/ros2_ws/src/robot_controller/maps/: map.pgm  map.yaml
raspberry_pi_node/ros2_ws/src/robot_controller/robot_controller/: avoidance_node.py  keyboard_node.py  lidar_node.py  motor_node.py  nav2_goal_publisher.py
(+30 files in other folders)
