<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_controller</name>
  <version>0.1.0</version>
  <description>
    Autonomous skid-steer robot controller.
    Nodes: lidar_node, motor_node, avoidance_node, keyboard_node.
    Hardware: RPLIDAR A1 (/dev/ttyUSB0), CAN STM32 slave (can0 @ 500kbps).
  </description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <!-- ROS 2 runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Build/test -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
